adding margin and reducing width of sidebar in settings page

--- a/src/templates/research_settings.html
+++ b/src/templates/research_settings.html
@@ -5,11 +5,10 @@
 {% block body %}
 
 {% load static %}
-<div class="uk-container uk-grid">
+<div class="uk-container uk-grid uk-margin-top">
 
-  <ul class="uk-tab uk-tab-left uk-width-medium-1-2" data-uk-tab="{connect: '#settings_switcher'}">
-      <li class="" aria-expanded="false"><a id="change-password-link" href="#">Password</a></li>
-      <li class="" aria-expanded="false"><a href="#">Item</a></li>
+  <ul class="uk-tab uk-tab-left uk-width-medium-1-5" data-uk-tab="{connect: '#settings_switcher'}">
+      <li class="uk-width-medium-5-5" aria-expanded="false"><a id="change-password-link" href="#">Password</a></li>
   </ul>
 
   <ul id="settings_switcher" class="uk-switcher uk-margin-left">
