--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -78,3 +78,13 @@ br.sep {
 .signup-form {
   max-width: 700px;
 }
+
+/****************************
+ * CSS for search-related components
+ ****************************/
+
+.paginator {
+  font-size: 1.5em;
+  margin-top: auto;
+  margin-bottom: 1em;
+}
