--- a/src/templates/includes/entry_snippet.html
+++ b/src/templates/includes/entry_snippet.html
@@ -6,19 +6,12 @@ A template for displaying a brief summary of a compendium entry.
   {{ entry.title }}
 </h2>
 
-<div>
-  <span class="uk-text-break">
-    {{ entry.all_authors }}
-  </span>
-</div>
-
-{% with authors=entry.authors.all %}
+{% with authors=entry.all_authors %}
 {% if authors %}
 <div>
-  <span class="uk-text-bold">Authors:</span>
-  {% for author in authors %}
-  {{ author.authorname }},
-  {% endfor %}
+  <span class="uk-text-break">
+    <span class="uk-text-bold">Authors:</span> {{ authors }}
+  </span>
 </div>
 {% endif %}
 {% endwith %}
