--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -23,6 +23,7 @@
 
     {# Custom stylesheets #}
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     {% endblock %}
 
     {% block head %}{% endblock %}
