--- a/src/templates/includes/searchbar.html
+++ b/src/templates/includes/searchbar.html
@@ -2,11 +2,7 @@
 Template for a generic searchbar for the site.
 {% endcomment %}
 
-<form class="uk-form uk-search" data-uk-search="" method="POST">
-  <fieldset data-uk-margin="">
-    <div class="uk-form-icon">
-      <i class="uk-icon-search"></i>
-      <input class="uk-form-width-large" type="search" placeholder="Search...">
-    </div>
-  </fieldset>
+<form class="uk-width-1-1 uk-search uk-search-default" method="GET">
+  <span uk-search-icon=""></span>
+  <input class="uk-search-input" type="search" placeholder="Search...">
 </form>
