--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -8,38 +8,36 @@ Add some padding between the footer and the element above it
 
 <div class="uk-margin-top"></div>
 
-<footer class="uk-block uk-block-secondary uk-contrast uk-text-break">
-  <div class="uk-container-center uk-width-small-8-10">
-    <div class="uk-grid uk-grid-divider">
-      <div class="uk-width-4-10">
-        <p>
-          The Encryption Compendium is sponsored by
-          <a href="https://siliconflatirons.org">Silicon Flatirons</a>,
-          <a href="https://colorado.edu">the University of Colorado Boulder</a>, and
-          <a href="https://facebook.com">Facebook</a>.
-        </p>
-      </div>
-
-      <div class="uk-width-3-10">
-        <ul class="uk-list">
-          <li>
-            <a href="#">Contact us</a>
-          </li>
-          <li>
-            <a href="#">About</a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="uk-width-3-10">
-        <ul class="uk-list">
-          <li>
-            <a href="https://github.com/The-Encryption-Compendium/the-encryption-compendium">
-              <i class="uk-icon-github"></i> GitHub
-            </a>
-          </li>
-        </ul>
-      </div>
+<footer class="uk-section uk-section-secondary uk-text-break">
+  <div class="uk-container">
+  <div class="uk-grid-divider" uk-grid="">
+    <div class="uk-width-1-3">
+      The Encryption Compendium is sponsored by
+      <a href="https://siliconflatirons.org">Silicon Flatirons</a>,
+      <a href="https://colorado.edu">the University of Colorado Boulder</a>, and
+      <a href="https://facebook.com">Facebook</a>.
     </div>
+
+    <div class="uk-width-1-3">
+      <ul class="uk-list">
+        <li>
+          <a href="#">Contact us</a>
+        </li>
+        <li>
+          <a href="#">About</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="uk-width-1-3">
+      <ul class="uk-list">
+        <li>
+          <a href="https://github.com/The-Encryption-Compendium/the-encryption-compendium">
+            <span uk-icon="icon: github"></span> GitHub
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
   </div>
 </footer>
