--- a/src/templates/dashboard_base.html
+++ b/src/templates/dashboard_base.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 {% block contents %}
-<h1 class="uk-h1">{% block page_header %}{% endblock %}</h1>
+<h1 class="uk-h1 uk-margin-top">{% block page_header %}{% endblock %}</h1>
 <hr>
 {% endblock %}
 {% endblock %}
