--- a/src/templates/includes/password_change_form.html
+++ b/src/templates/includes/password_change_form.html
@@ -2,35 +2,33 @@
 A generic password change form for the site.
 {% endcomment %}
 
-<form class="uk-form" method="POST">
-  <div class="container">
+<form method="POST">
+  <div class="uk-container uk-width-1-2@s">
     {% csrf_token %}
 
-    <h2 class="text-left display-5 mb-4">
+    <h2 class="text-center">
       Change Password
     </h2>
 
     {% if form.non_field_errors or form_errors %}
-    <span class="d-flex justify-content-left">
-      <div class="form-error alert alert-danger" role="alert">
-        {% if form.non_field_errors|length == 1 %}
+    <div class="form-error alert alert-danger" role="alert">
+      {% if form.non_field_errors|length == 1 %}
 
-        <div class="text-left">
-          {% for error in form.non_field_errors %}
-          {{ error }}
-          {% endfor %}
-        </div>
-
-        {% endif %}
-
-        {% if form_errors %}
-        <div class="text-left">
-            {{ form_errors }}
-        </div>
-        {% endif %}
-
+      <div class="text-left">
+        {% for error in form.non_field_errors %}
+        {{ error }}
+        {% endfor %}
       </div>
-    </span>
+
+      {% endif %}
+
+      {% if form_errors %}
+      <div class="text-left">
+          {{ form_errors }}
+      </div>
+      {% endif %}
+
+    </div>
     {% endif %}
 
     {% for field in form %}
@@ -39,10 +37,8 @@ A generic password change form for the site.
       {% include "includes/field_errors.html" with errors=field.errors only %}
     </div>
     {% endfor %}
-    <div class="text-left">
-      <button id="change-password" class="uk-button uk-margin-top" type="submit">
-        Change password
-      </button>
-    </div>
+    <button id="change-password" class="uk-button uk-button-primary uk-margin-top" type="submit">
+      Change password
+    </button>
   </div>
 </form>
