--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -2,7 +2,7 @@
 Navigation bar across the top of the site for the researcher view.
 {% endcomment %}
 
-<nav class="uk-navbar-container" id="navbar" uk-navbar>
+<nav class="uk-navbar-container uk-navbar-transparent" id="navbar" uk-navbar>
   {# Link back to landing page #}
   <div class="uk-navbar-left">
     <ul class="uk-navbar-nav">
@@ -11,6 +11,11 @@ Navigation bar across the top of the site for the researcher view.
           The Encryption Compendium
         </a>
       </li>
+
+      <li>
+        <a href="#">
+          About
+        </a>
     </ul>
   </div>
 
