--- a/src/templates/entry_list.html
+++ b/src/templates/entry_list.html
@@ -26,7 +26,9 @@ Display a list of entries from the compendium
     {# Display options to go to the next and previous page(s) #}
     <div class="uk-width-1-3">
     {% if page_obj.has_previous %}
-      <a href="?page=1">&laquo; first</a> |
+      <a href="?page=1">
+        <span uk-icon="icon:chevron-double-left;ratio:1.5"></span> first
+      </a> |
       <a href="?page={{ page_obj.previous_page_number }}">previous</a>
     {% endif %}
     </div>
@@ -38,7 +40,9 @@ Display a list of entries from the compendium
     <div class="uk-width-1-3">
     {% if page_obj.has_next %}
       <a href="?page={{ page_obj.next_page_number }}">next</a> |
-      <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+      <a href="?page={{ page_obj.paginator.num_pages }}">
+        last <span uk-icon="icon:chevron-double-right;ratio:1.5"></span>
+      </a>
     {% endif %}
     </div>
   </div>
