--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -13,18 +13,18 @@ Add some padding between the footer and the element above it
   <div class="uk-grid-divider" uk-grid="">
     <div class="uk-width-1-3">
       The Encryption Compendium is sponsored by
-      <a href="https://siliconflatirons.org">Silicon Flatirons</a>,
-      <a href="https://colorado.edu">the University of Colorado Boulder</a>, and
-      <a href="https://facebook.com">Facebook</a>.
+      <a class="uk-link" href="https://siliconflatirons.org">Silicon Flatirons</a>,
+      <a class="uk-link" href="https://colorado.edu">the University of Colorado Boulder</a>, and
+      <a class="uk-link" href="https://facebook.com">Facebook</a>.
     </div>
 
     <div class="uk-width-1-3">
       <ul class="uk-list">
         <li>
-          <a href="#">Contact us</a>
+          <a class="uk-link" href="#">Contact us</a>
         </li>
         <li>
-          <a href="#">About</a>
+          <a class="uk-link" href="#">About</a>
         </li>
       </ul>
     </div>
@@ -32,7 +32,7 @@ Add some padding between the footer and the element above it
     <div class="uk-width-1-3">
       <ul class="uk-list">
         <li>
-          <a href="https://github.com/The-Encryption-Compendium/the-encryption-compendium">
+          <a class="uk-link" href="https://github.com/The-Encryption-Compendium/the-encryption-compendium">
             <span uk-icon="icon: github"></span> GitHub
           </a>
         </li>
