--- a/src/templates/landing_page.html
+++ b/src/templates/landing_page.html
@@ -8,7 +8,7 @@ Template for the landing page for the site.
 <div class="uk-container">
   <div class="uk-text-center uk-margin-top">
     <h1 class="uk-heading-primary uk-text-break">
-      Encryption Compendium
+      The Encryption Compendium
     </h1>
   </div>
 
@@ -41,5 +41,14 @@ Template for the landing page for the site.
       </div>
     </div>
   </form>
+
+  <h2 class="uk-h2">
+    About us
+  </h2>
+
+  {% lorem 3 p %}
+
+  <br class="sep">
+
 </div>
 {% endblock %}
