--- a/src/templates/research_settings.html
+++ b/src/templates/research_settings.html
@@ -8,7 +8,7 @@
 <div class="uk-grid uk-margin-top">
   <div class="uk-width-1-5@s">
     <ul class="uk-tab-left" uk-tab="connect: #settings-switcher">
-      <li class="uk-active"><a href="#">Change password</a></li>
+      <li id="change-password-link" class="uk-active"><a href="#">Change password</a></li>
       <li class="uk-active"><a href="#">Account settings</a></li>
     </ul>
   </div>
