Ensure that selected tags change color on the landing page as soon as they're clicked.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -46,7 +46,7 @@ br.sep {
  ****************************/
 
 .selected-tag {
-  background-color: #aaaaaa;
+  background-color: #aaaaaa !important;
 }
 
 /****************************
