--- a/src/templates/includes/searchbar.html
+++ b/src/templates/includes/searchbar.html
@@ -2,7 +2,7 @@
 Template for a generic searchbar for the site.
 {% endcomment %}
 
-<form class="uk-width-1-1 uk-search uk-search-default" method="GET">
+<form class="uk-width-1-1 uk-text-large uk-search uk-search-default" method="GET">
   <span uk-search-icon=""></span>
-  <input class="uk-search-input" type="search" placeholder="Search...">
+  <input class="uk-search-input uk-form-large" type="search" placeholder="Search...">
 </form>
