A couple more tweaks to styling and a slightly expanded site footer.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -46,7 +46,8 @@ br.sep {
  ****************************/
 
 .selected-tag {
-  background-color: #aaaaaa !important;
+  background-color: #222 !important;
+  color: #fff !important;
 }
 
 /****************************
