--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -21,10 +21,13 @@ Add some padding between the footer and the element above it
     <div class="uk-width-1-3">
       <ul class="uk-list">
         <li>
+          <a class="uk-link" href="#">About</a>
+        </li>
+        <li>
           <a class="uk-link" href="#">Contact us</a>
         </li>
         <li>
-          <a class="uk-link" href="#">About</a>
+          <a class="uk-link" href="#">Team</a>
         </li>
       </ul>
     </div>
@@ -34,6 +37,11 @@ Add some padding between the footer and the element above it
         <li>
           <a class="uk-link" href="https://github.com/The-Encryption-Compendium/the-encryption-compendium">
             <span uk-icon="icon: github"></span> GitHub
+          </a>
+        </li>
+        <li>
+          <a class="uk-link" href="https://twitter.com/SiliconFlatiron">
+            <span uk-icon="icon: twitter"></span> Twitter
           </a>
         </li>
       </ul>
