changes for viewing individual articles

--- a/src/templates/includes/entry_snippet.html
+++ b/src/templates/includes/entry_snippet.html
@@ -52,4 +52,4 @@ A template for displaying a brief summary of a compendium entry.
 {% endif %}
 {% endwith %}
 
-<a href="#">See more</a>
+<a href="/articles/{{ entry.slug }}">See more</a>
